# standalone-repros

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  lib.go  lib_test.go  main.go  maven_install.json  requirements.txt  test_repo_rule.bzl
between/: BUILD.bazel
go/: BUILD.bazel  main.go
go/lib/: BUILD.bazel  lib.go  lib_test.go
go/lib/mocks/: BUILD.bazel  lib_mock.go
java/: BUILD.bazel  Test.java
lib/: BUILD.bazel  lib.go  otherlib.go
proto/: BUILD.bazel  go.mod  server.proto
