load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go",
    srcs = ["main.go"],
    importpath = "github.com/blorente/standalone-repros/go",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib",
        "//proto:go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
