load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "badlib",
    srcs = [
        "lib.go",
    ],
    importpath = "github.com/blorente/standalone-repros/lib",
    visibility = ["//visibility:public"],
)

go_library(
    name = "lib",
    srcs = [
        "lib.go",
        "otherlib.go",
    ],
    importpath = "github.com/blorente/standalone-repros/lib",
    visibility = ["//visibility:public"],
)
