load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lib",
    srcs = ["lib.go"],
    importpath = "github.com/blorente/standalone-repros/go/lib",
    visibility = ["//visibility:public"],
)

go_test(
    name = "lib_test",
    srcs = [
        "lib_test.go",
        #keep
        "//go/lib/mocks:mock_lib",
    ],
    embed = [":lib"],
    deps = [
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
