load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("@bazel_gomock//:gomock.bzl", "gomock")

gomock(
    name = "mock_lib",
    out = "mock_lib_test.go",
    interfaces = ["MyFun"],
    library = "//lib",
    package = "main",
)

go_test(
    name = "mocks_test",
    srcs = ["mock_lib_test.go"],
)
